<resources>
    <string name="app_name">NotasDroid_Guillermo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_log_in">LogIn</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="email">Correo electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="text1_login">¿Aún no tienes cuenta?</string>
    <string name="text2_login">Registrarse</string>

    <string name="name">Nombre</string>
    <string name="cicle">Ciclo</string>
    <string name="curse">Curso</string>
    <string name="gallery">Galería</string>
    <string name="camera">Cámara</string>
    <string name="register">Registrarse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>