<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Registro">


    <EditText
            android:layout_width="340dp"
            android:layout_height="46dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNombre"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/name" android:background="@drawable/zborde" android:editable="true"
            app:layout_constraintHorizontal_bias="0.507" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.154"/>
    <EditText
            android:layout_width="340dp"
            android:layout_height="46dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtCorreo"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/email" android:background="@drawable/zborde"
            app:layout_constraintHorizontal_bias="0.507" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.262"/>
    <EditText
            android:layout_width="340dp"
            android:layout_height="46dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtPass"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/pass" android:background="@drawable/zborde"
            app:layout_constraintHorizontal_bias="0.507" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.367"/>
    <Spinner
            android:layout_width="155dp"
            android:layout_height="46dp" android:id="@+id/spinner"
            android:spinnerMode="dropdown" android:background="@drawable/zborde"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14" app:layout_constraintVertical_bias="0.48"/>
    <Spinner
            android:layout_width="155dp"
            android:layout_height="46dp" android:id="@+id/spinner2"
            android:spinnerMode="dropdown" android:background="@drawable/zborde"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.863" app:layout_constraintVertical_bias="0.48"/>
    <ImageView
            android:layout_width="151dp"
            android:layout_height="163dp" android:src="@mipmap/ic_launcher"
            android:id="@+id/imaUsuario"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.138"
            app:layout_constraintVertical_bias="0.73" tools:visibility="visible"/>
    <Button
            android:text="@string/gallery"
            android:layout_width="141dp"
            android:layout_height="44dp" android:id="@+id/btnGaleria"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintVertical_bias="0.646"/>
    <Button
            android:text="@string/camera"
            android:layout_width="141dp"
            android:layout_height="44dp" android:id="@+id/btnCamara"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.87" app:layout_constraintVertical_bias="0.752"/>
    <Button
            android:text="@string/register"
            android:layout_width="139dp"
            android:layout_height="46dp" android:id="@+id/btnRegistro"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.935" android:background="@drawable/zbordebotones"
            android:textColor="#FFFFFF"/>
</androidx.constraintlayout.widget.ConstraintLayout>