<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>
    <include layout="@layout/content_log_in" android:id="@+id/include"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_dialog_email" android:visibility="invisible"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/constraintLayout2">
        <EditText
                android:layout_width="260dp"
                android:layout_height="46dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtCorreoLogIn"
                android:hint="@string/email"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.385" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.502"
                android:background="@drawable/zborde"/>
        <Button
                android:text="@string/login"
                android:layout_width="139dp"
                android:layout_height="47dp" android:id="@+id/btnLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintVertical_bias="0.635" android:background="@drawable/zbordebotones"
                android:textColor="#FFFFFF"/>
        <EditText
                android:layout_width="260dp"
                android:layout_height="46dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/txtPassLogIn"
                android:hint="@string/pass" android:background="@drawable/zborde"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="@string/text1_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.246"
                app:layout_constraintVertical_bias="0.938"/>
        <TextView
                android:text="@string/text2_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView4"
                android:textColor="#00B0FF" android:textStyle="bold"
                android:textAllCaps="true" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.728"
                app:layout_constraintVertical_bias="0.938" android:onClick="abrirRegistro"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

